* Wed 15 Oct 2008 Caius Chance <cchance@redhat.com>
- Fixed blurred 'u' and 'W' for Sans Bold font (rhbz#463036).
- Released as version 1.04.92

* Wed 17 Sep 2008 Caius Chance <cchance@redhat.com>
- Fixed missing hinting instructions for all Mono fonts (rhbz#460090).
- Fixed missing hinting instructions for all Sans fonts (rhbz#460090).
- Fixed missing hinting instructions for all Serif fonts (rhbz#460090).
- Released as version 1.04.91

* Tue 09 Sep 2008 Caius Chance <cchance@redhat.com>
- Backed up all released files in ./dist directory.

* Fri 05 Sep 2008 Caius Chance <cchance@redhat.com>
- Fixed incorrect glyph points and missing hinting instructions for:
  Mono Bold Italic (up to U+2012) (rhbz#460090).

* Mon 25 Aug 2008 Caius Chance <cchance@redhat.com>
- Fixed incorrect glyph points and missing hinting instructions for:
  U+0079, U+03BC, U+0431, U+2010..2012, U+1114117 (rhbz#458592).
- Released as version 1.04.90.

* Thu 13 Jul 2008 Caius Chance <cchance@redhat.com>
- Released as version 1.04.

* Thu 12 Jun 2008 Caius Chance <cchance@redhat.com>
- Released as version 1.04.beta2 (1.03.99).
- Added ZIP package building for non-tar users.
- rhbz#440992:
  - Created Romanian "T/t/S/s with comma below" (U+0218..021B) on all fonts.
  - Fixed "T/s with cedilla below" (U+0162/0163) on all fonts.
  - Created "Hyphen" and "Non-Breaking Hyphen" (U+2010..2011) on all fonts.

* Wed 11 Jun 2008 Caius Chance <cchance@redhat.com>
- Added last Version 1.03 from original manufacturer.
- Renamed directory 'archive' to 'sandbox'.
- Added directory description in hosting home directory.
- Created ZIP packages for Version 1.03 and 1.04.beta.

* Tue 04 Jun 2008 Caius Chance <cchance@redhat.com>
- rhbz#440992:
  - Created "Hyphen" and "Non-Breaking Hyphen" (U+2010..2011) on Sans Regular.

* Mon 03 Jun 2008 Caius Chance <cchance@redhat.com>
- rhbz#440992:
  - Created Romanian "T/t/S/s with comma below" (U+0218..021B) on Sans Regular. 