@@ -1,3 +1,8 @@
+* Fri 28 Nov 2008 Caius Chance <cchance@redhat.com>
+- Corrected version number in Makefile.
+- Fixed make target of source tarball.
+- Uploaded 1.04.92 source tarball to release area.
+
 * Wed 15 Oct 2008 Caius Chance <cchance@redhat.com>
 - Fixed blurred 'u' and 'W' for Sans Bold font (rhbz#463036).
 - Released as version 1.04.92
